--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -62,7 +62,7 @@
             }
             .projectCardContainer {
                 width: calc(30% - 10px);
-                margin: 20px 30px 20px 20px;
+                margin: 20px 20px 20px 20px;
                 background-color: #A259FF;
                 border: 3px solid #18191F;
                 border-radius: 20px;
@@ -88,16 +88,16 @@
                 margin: 22px 20px;
             }
             .contactsContainer {
-                margin-top: 181px;
+                margin-top: 180px;
                 border-radius: 20px;
                 background-color: #0ACF83;
+                padding: 80px 50px;
                 margin-left: 50px;
                 margin-right: 50px;
-                padding-top: 80px;
-                padding-bottom: 80px;
-                height: 548px;
             }
             .buttonContainer {
+                display: flex;
+                align-items: center;
                 background-color: #000000;
                 border-radius: 15px;
                 box-shadow: 8px 7px 1px #00C6AE;
@@ -108,6 +108,20 @@
                 font-weight: 700;
                 padding: 12px 30px;
                 font-size: 32px;
+                color: #FFFFFF;
+            }
+            .authorText {
+                font-family: 'Montserrat', sans-serif; 
+                font-weight: 500; 
+                text-align: center; 
+                font-size: 25px;
+                color: #000000;
+            }
+            .aboutDescriptionText {
+                font-family: 'Montserrat', sans-serif; 
+                font-size: 24px; 
+                line-height: 34px; 
+                font-weight: 700; 
                 color: #FFFFFF;
             }
         </style>
@@ -166,20 +180,24 @@
                 </h3>
                 
                 <div style="display: flex;">
-                    <a href="mailto:{{ profile.email }}" style="text-decoration: none;" target="_blank">
-                        <div class="buttonContainer">
-                            <h1 class="buttonText">
-                                Hire me
-                            </h1>
-                        </div>
-                    </a>
+                    {% if profile.githubUrl and githubIcon %}
+                        <a href="{{ profile.githubUrl }}" style="text-decoration: none;" target="_blank">
+                            <div class="buttonContainer" style="padding-right: 30px;">
+                                <h1 class="buttonText">
+                                    Github
+                                </h1>
+                                <img src="{{ githubIcon }}" alt="github" style="width: 50px; height: 50px; background-color: white; border-radius: 4px;">
+                            </div>
+                        </a>
+                    {% endif %}
 
-                    {% if profile.linkedinUrl %}
+                    {% if profile.linkedinUrl and linkedinIcon %}
                         <a href="{{ profile.linkedinUrl }}" style="text-decoration: none;margin-left: 50px;" target="_blank">
                             <div class="buttonContainer">
                                 <h1 class="buttonText">
-                                    Linkedin Profile
+                                    Linkedin
                                 </h1>
+                                <img src="{{ linkedinIcon }}" alt="linkedin" style="width: 50px; height: 50px;padding-right: 30px;">
                             </div>
                         </a>
                     {% endif %}
@@ -196,20 +214,20 @@
 
         <!-- About me -->
         <div class="aboutmeContainer" id="about" style="margin-top: 180px; display: flex; padding-left: 55px; padding-right: 55px;">
-            {% if profile.image %}
+            <!-- {% if profile.image %}
                 <div style="width: 40%;display: flex; justify-content: flex-start">
                     <img src="{{ profile.image.url }}" alt="profile" style="width: 450px; border-radius: 10px; border: 2px solid #18191F; box-shadow: 8px 8px 4px rgb(0, 0, 0, 0.3);">
                 </div>
-            {% endif %}
-            <div style="width: 60%;">
+            {% endif %} -->
+            <div >
                 <h1 class="title" style="color: #FFFFFF;margin: 0;">About me</h1>
                 <h3 style="width: 50%; font-family: 'Montserrat', sans-serif; font-weight: 700; font-size: 32px; color: #FFDD55; line-height: 28px;margin-top: 30px; margin-bottom: 0px;">
                     {{ profile.title }}
                 </h3>
-                <p style="font-family: 'Montserrat', sans-serif; font-size: 24px; line-height: 34px; font-weight: 700; color: #FFFFFF;margin-top: 20px;">
+                <p class="aboutDescriptionText" style="margin-top: 20px;">
                     {{profile.descriptionEN}}
                 </p>
-                <div style="display: flex; justify-content: space-between;">
+                <!-- <div style="display: flex; justify-content: space-between;">
                     <a href="mailto:{{ profile.email }}" style="text-decoration: none;" target="_blank">
                         <div class="buttonContainer">
                             <h1 class="buttonText">
@@ -227,7 +245,7 @@
                             </div>
                         </a>
                     {% endif %}
-                </div>
+                </div> -->
             </div>
         </div>
 
@@ -265,15 +283,21 @@
 
         <!-- Contacts -->
         <div class="contactsContainer" id="contact">
-            <h1 class="title" style="color: #FFFFFF;text-align: center;margin-top: 0;">
+            <h1 class="title" style="color: #FFFFFF; margin-top: 0;">
                 Contacts
             </h1>
+
+            <div style="padding: 0 20px;">
+                <h1 class="aboutDescriptionText">Email : {{ profile.email }}</h1>
+                <h1 class="aboutDescriptionText">Address : {{ profile.address }}</h1>
+                <h1 class="aboutDescriptionText">Phone : {{ profile.phone }}</h1>
+            </div>
         </div>
 
         <!-- Footer -->
         <div style="margin: 130px 0px;">
-            <a href="https://www.figma.com/community/file/1366191847286274504/personal-portfolio-figma-portfolio-portfolio">
-                <h1 style="font-family: 'Montserrat', sans-serif; font-weight: 500; text-align: center;">
+            <a href="https://www.figma.com/community/file/1366191847286274504/personal-portfolio-figma-portfolio-portfolio" style="text-decoration: none;"="_blank">
+                <h1 class="authorText">
                     Design Author : Muhammad Aqsam
                 </h1>
             </a>
